# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "o_auth_protected_resource_metadata"
version = "1.0.5"
rust-version = "1.87.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "13fee2f2-9585-468a-ae3b-8f4cbaa5651c"
definition_asset_id = "o-auth-protected-resource-metadata"
implementation_asset_id = "o-auth-protected-resource-metadata-flex"

[dependencies]
pdk = { version = "1.4.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.4.0", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
